add history router demo

--- a/vue-router/history/index.html
+++ b/vue-router/history/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>Hash 路由</title>
+  <title>History 路由</title>
 </head>
 <body>
   <div>
-    <a href="#/">home</a>
-    <a href="#/book">book</a>
-    <a href="#/movie">movie</a>
+    <a href="javascript:void(0);" data-href="/">home</a>
+    <a href="javascript:void(0);" data-href="/book">book</a>
+    <a href="javascript:void(0);" data-href="/movie">movie</a>
       
     <div id="content"></div>
   </div>
